<resources>
    <string name="app_name">Greet</string>
    <string name="no_groups_explaination">You haven\'t joined any groups yet. You can do so by clicking here and search for one or by just creating a new one. Have fun!</string>
    <string name="no_groups_found">No groups found</string>
    <string name="create_group_button">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="search_groups">Search Groups</string>
    <string name="create_new_group">Create new group</string>
    <string name="no_posts_in_group">There are no posts in this group yet!</string>
    <string name="no_posts_explaination">Be the first one to make a post by pressing on the add button!</string>
    <string name="new_post_toolbar">New Post</string>
    <string name="start_writing">Start writing…</string>
    <string name="no_groups_search">No groups were found for that keyword. Please try again using a different keyword or create your own group!</string>
    <string name="search_hint">Search for groups</string>
    <string name="join_group_title">Join this group?</string>
    <string name="join_group_message">Join this group by clicking yes. You can then open it from your homescreen!</string>
    <string name="joining_group">Joining %s</string>
    <string name="create_group_message">Enter a name and confirm to create a new group. It will automatically appear in your homescreen</string>
    <string name="creating_group_toast">Creating %s</string>
    <string name="yesterday">Yesterday</string>
    <string name="user_created_group">%s created the group</string>
    <string name="transition_author_iv">KEY_AUTHOR_IV_TRANSITION</string>
    <string name="transition_key_post_image">KEY_POST_IMAGE</string>
    <string name="invalid_comment">Invalid Comment</string>
    <string name="comment_on_post_placeholder">Comment on %s\'s post</string>
    <string name="comment_dialog_message">Leave a comment and confirm.</string>
    <string name="comment_added_toast">Your comment is being added!</string>
    <string name="no_comments_yet">There are no comments yet!</string>
    <string name="comments_title">Comments:</string>
    <string name="notification_new_comment_title">There is a new comment on your post</string>
    <string name="new_comment_notification_body">%1$s: %2$s</string>
    <string name="leave_reply">Leave a reply</string>
    <string name="action_reply">Reply</string>
    <string name="replied_to_persons_comment">Comment posted!</string>
    <string name="show_in_widget">Show in Widget</string>
    <string name="group_widet_add_title">Show posts in widget?</string>
    <string name="group_widget_add_message">You can set this group\'s posts to be shown on a homescreen widget. Just press OK and add the widget to the homescreen.</string>
    <string name="posts_shown_in_widget">Posts will be shown in widget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="no_posts_available">No posts available</string>
    <string name="loggin_in">Logging in</string>
    <string name="please_wait">Please wait</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="widget_posts_confirm_dialog">Posts for %s will be shown in the widget</string>
    <string name="confirm_widget_dialog_message">Do you want %s\' posts to be shown in the widget?</string>
    <string name="confirm_selection">Confirm selection</string>
    <string name="select_widget_group">Select widget group</string>
    <string name="select_group_for_widget_long">Select a group to be shown in the widget</string>
    <string name="content_description_app_icon">App Icon</string>
    <string name="selected_image_preview">Selected image preview</string>
    <string name="select_photo_button">Select photo button</string>
    <string name="post_image">Post Image</string>
    <string name="sync_widget_data">Sync Widget data</string>
    <string name="author_profile_photo">Author Profile Photo</string>
    <string name="select_a_group">Select a group</string>
    <string name="select_group_message">Click on a group on the left so show it\'s posts here. If you don\'t have any groups yet create or join one!</string>
    <string name="search_for_groups">Search for groups</string>
    <string name="search_groups_message">Enter a group\'s name to search for it</string>
    <string name="please_enter_text">Please enter some text</string>
    <string name="post_is_being_created">Your post is being created</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="group_background">Group Background</string>
    <string name="publish_post">Publish Post</string>
    <string name="comment_on_post">Comment on this post</string>
    <string name="create_post">Create new Post</string>
    <string name="no_posts_saved">No Posts saved yet</string>
    <string name="show_widget_preview">Show widget preview</string>
</resources>
