<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <ProgressBar
        android:id="@+id/group_list_pb"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/empty_message_container"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/empty_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dashed_background"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/ic_group_add_black_24dp"
                android:text="@string/no_groups_found"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/no_groups_explaination"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/create_group_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_group_button"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/join_group_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empty_container" />

        <Button
            android:id="@+id/join_group_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/join_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/create_group_button"
            app:layout_constraintTop_toTopOf="@id/create_group_button" />


    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/groups_rv"
        android:layout_margin="8dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>