<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/new_post_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="2dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:stateListAnimator="@animator/raise"
        android:orientation="vertical"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/post_author_iv"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/photo" />

                <TextView
                    android:id="@+id/author_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:maxLines="1"
                    android:textColor="#333333"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@id/post_author_iv"
                    app:layout_constraintStart_toEndOf="@id/post_author_iv"
                    app:layout_constraintTop_toTopOf="@id/post_author_iv"
                    tools:text="Aaron Oertel" />

            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/new_post_edittext"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/start_writing"
                android:textColor="#666666"
                android:textSize="13sp"
                android:lines="5"
                android:inputType="textCapSentences|textAutoCorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:orientation="vertical"
                android:layout_width="48dp"
                android:layout_height="48dp">

                <ImageView
                    style="@style/ElevationItem"
                    android:id="@+id/post_image_iv"
                    android:visibility="gone"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/selected_image_preview" />

                <ImageView
                    style="@style/ElevationItem"
                    android:id="@+id/post_add_Image"
                    android:background="@drawable/dashed_background_grey"
                    android:src="@drawable/ic_add_a_photo_24dp"
                    android:padding="12dp"
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/select_photo_button" />

            </FrameLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_white_24dp"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="6dp" />

</FrameLayout>