<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            style="@style/ElevationItem"
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="72dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="@string/transition_author_iv"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/post_author_iv"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_margin="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/photo" />

                        <TextView
                            android:id="@+id/author_name_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:maxLines="1"
                            android:textColor="#333333"
                            android:textSize="14sp"
                            app:layout_constraintLeft_toRightOf="@id/post_author_iv"
                            app:layout_constraintTop_toTopOf="@id/post_author_iv"
                            tools:text="Aaron Oertel" />

                        <TextView
                            android:id="@+id/post_date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="@id/post_author_iv"
                            app:layout_constraintLeft_toLeftOf="@id/author_name_tv"
                            app:layout_constraintTop_toBottomOf="@id/author_name_tv"
                            tools:text="3 days ago" />

                    </android.support.constraint.ConstraintLayout>

                    <TextView
                        android:id="@+id/post_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        tools:text="Nam non leo posuere, vestibulum metus at, consequat ex. Donec blandit quam nisi. Mauris accumsan semper iaculis. Aliquam blandit sit amet erat et suscipit. Sed non dapibus nulla. Nunc ultricies leo vitae velit pellentesque consequat. Quisque finibus purus ut erat facilisis porta vitae ut nunc." />

                    <ImageView
                        android:id="@+id/post_image_iv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:transitionName="@string/transition_key_post_image"
                        android:visibility="invisible"
                        tools:src="@drawable/login_background" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/comments_empty_tv"
        android:padding="16dp"
        android:text="@string/no_comments_yet"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:padding="16dp"
        android:id="@+id/comments_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/comments_rv"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_comment_white_24dp"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="6dp" />

</android.support.design.widget.CoordinatorLayout>

